--- a/www/static/template/shop_onserver/blog-single.html
+++ b/www/static/template/shop_onserver/blog-single.html
@@ -116,12 +116,7 @@
                             <li><a href="services.html">我们的服务</a></li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">产品中心</a>
-                                <ul>
-                                    <li><a href="shop.html">产品中心</a></li>
-                                    <li><a href="shop-single.html">单品</a></li>
-                                    <li><a href="shopping-cart.html">购物车</a></li>
 
-                                </ul>
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
                             <li class="current"><a href="contact.html">联系我们</a></li>
@@ -293,8 +288,8 @@
                             <div class="col-md-12">
                                 <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden"
                                        value="">
-                                <button class="thm-btn bg-1" type="submit" data-loading-text="Please wait...">send
-                                    message
+                                <button class="thm-btn bg-1" type="submit" data-loading-text="加载中...">
+发送
                                 </button>
                             </div>
                         </div>
