--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -27,16 +27,16 @@
 
 <!--Start Preloader -->
 <div class="preloader"></div>
-<!--End Preloader -->  
+<!--End Preloader -->
 
-<!--Start Top bar area -->  
+<!--Start Top bar area -->
 <section class="top-bar-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-5 col-sm-12 col-xs-12">
                 <div class="welcome">
                     <p>欢迎光临源鸿大棚产品服务中心</p>
-                </div> 
+                </div>
             </div>
             <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12" style="display:none;">
                 <div class="topinfo clearfix">
@@ -76,8 +76,8 @@
         </div>
     </div>
 </section>
-<!--End Top bar area --> 
- 
+<!--End Top bar area -->
+
 <!--Start header area-->
 <header class="header-area">
     <div class="container">
@@ -92,8 +92,8 @@
 
         </div>
     </div>
-</header>  
-<!--End header area--> 
+</header>
+<!--End header area-->
 
 <!--Start mainmenu area-->
 <section class="mainmenu-area stricky">
@@ -102,7 +102,7 @@
             <div class="col-md-8 col-sm-8 col-xs-12">
                 <!--Start mainmenu-->
                 <nav class="main-menu">
-                    <div class="navbar-header">   	
+                    <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -147,15 +147,15 @@
                                 <button type="submit"><i class="fa fa-search"></i></button>
                             </form>
                         </li>
-                    </ul>   
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-</section> 
-<!--End mainmenu area-->  
+</section>
+<!--End mainmenu area-->
 
-<!--Start breadcrumb area-->     
+<!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
 		<h1>行业动态</h1>
@@ -171,11 +171,11 @@
                 <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li>News</li>
-            </ul>    
+            </ul>
         </div>
         <div class="right pull-right">
             <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>分享</a>
-        </div>  
+        </div>
     </div>
 </section>
 <!--End breadcrumb bottom area-->
@@ -193,7 +193,7 @@
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a> 
+                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -216,12 +216,12 @@
                                     <p>Pleasures and praising pains was born and will give you a completed account of the systems seds, and seds expound the actual teaching of the great explorer the master-builder  Nor again is there anyones who loves or pursues or desires to obtain pain of itself occasionally circumstance.</p>
                                     <div class="bottom clearfix">
                                         <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a> 
+                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>    
+                        </div>
                     </div>
                     <!--End single blog post-->
                     <!--Start single blog post-->
@@ -231,7 +231,7 @@
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a> 
+                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -254,12 +254,12 @@
                                     <p>Explain to you how all this mistaken idea of denouncing pleasures sed nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, because occasionally circumstances occur in which toil and pain can procure him some great pleasure. and praising pain was born and will teachings.</p>
                                     <div class="bottom clearfix">
                                         <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a> 
+                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>    
+                        </div>
                     </div>
                     <!--End single blog post-->
                     <!--Start single blog post-->
@@ -269,7 +269,7 @@
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a> 
+                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -292,12 +292,12 @@
                                     <p>Pleasures and praising pains was born and will give you a completed account of the systems seds, and seds expound the actual teaching of the great explorer the master-builder  Nor again is there anyones who loves or pursues or desires to obtain pain of itself occasionally circumstance.</p>
                                     <div class="bottom clearfix">
                                         <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a> 
+                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>    
+                        </div>
                     </div>
                     <!--End single blog post-->
                     <!--Start single blog post-->
@@ -307,7 +307,7 @@
                             <div class="overlay">
                                 <div class="box">
                                     <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a> 
+                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -330,18 +330,18 @@
                                     <p>Explain to you how all this mistaken idea of denouncing pleasures sed nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, because occasionally circumstances occur in which toil and pain can procure him some great pleasure. and praising pain was born and will teachings.</p>
                                     <div class="bottom clearfix">
                                         <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a> 
+                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>    
+                        </div>
                     </div>
                     <!--End single blog post-->
-                   
+
                     <!--Start post pagination-->
                     <div class="row">
-                        <div class="col-md-12"> 
+                        <div class="col-md-12">
                             <ul class="post-pagination text-center">
                                 <li><a href="#"><i class="fa fa-caret-left" aria-hidden="true"></i></a></li>
                                 <li class="active"><a href="#">1</a></li>
@@ -349,7 +349,7 @@
                                 <li><a href="#">3</a></li>
                                 <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i></a></li>
                             </ul>
-                        </div> 
+                        </div>
                     </div>
                     <!--End post pagination-->
                 </div>
@@ -373,38 +373,38 @@
                         <ul class="categories clearfix">
                             <li>
                                 <a href="#">
-                                    Smart Phones 
+                                    Smart Phones
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#"> 
+                                <a href="#">
                                     Desktop & Mac
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
-                            </li>  
+                            </li>
                             <li>
                                 <a href="#">
-                                    Game Console 
+                                    Game Console
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
-                            </li>  
+                            </li>
                             <li>
                                 <a href="#">
-                                    Safety & Security 
+                                    Safety & Security
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
-                            </li>  
+                            </li>
                             <li>
                                 <a href="#">
-                                    Uncategorized 
+                                    Uncategorized
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
-                            </li>     
+                            </li>
                         </ul>
                     </div>
                     <!--End single sidebar-->
-                    <!--Start single sidebar--> 
+                    <!--Start single sidebar-->
                     <div class="single-sidebar">
                         <div class="sidebar-title">
                             <h1>Recent Post</h1>
@@ -443,7 +443,7 @@
                                     January 10, 2016
                                 </h6>
                             </li>
-                           
+
                         </ul>
                     </div>
                     <!--End single sidebar-->
@@ -457,13 +457,13 @@
                             <li><a href="#">December 2013  (8)</a></li>
                             <li><a href="#">January 2014  (4)</a></li>
                             <li><a href="#">September 2014  (9)</a></li>
-                        </ul>    
-                    </div> 
+                        </ul>
+                    </div>
                     <!--End single-sidebar-->
                     <!--Start single-sidebar-->
                     <div class="single-sidebar popular-tag">
                         <div class="sidebar-title">
-                            <h1>Popular Tags</h1> 
+                            <h1>Popular Tags</h1>
                         </div>
                         <ul class="popular-tag">
                             <li><a href="#">Safe</a></li>
@@ -477,29 +477,29 @@
                             <li><a href="#">Software</a></li>
                             <li><a href="#">TV</a></li>
                             <li><a href="#">LED Screen</a></li>
-                        </ul>      
-                    </div> 
+                        </ul>
+                    </div>
                     <!--End single-sidebar-->
                     <!--Start single-sidebar-->
                     <div class="single-sidebar facebook">
                         <div class="sidebar-title">
-                            <h1>Facebook</h1>  
+                            <h1>Facebook</h1>
                         </div>
                         <div class="follow-us-content">
-                            <img src="images/sidebar/fb-follow-us.jpg" alt="Awesome Follow Us Image">    
-                        </div>        
-                    </div> 
+                            <img src="images/sidebar/fb-follow-us.jpg" alt="Awesome Follow Us Image">
+                        </div>
+                    </div>
                     <!--End single-sidebar-->
-                </div>    
+                </div>
             </div>
-            <!--End Sidebar Wrapper-->  
+            <!--End Sidebar Wrapper-->
         </div>
     </div>
-</section> 
-<!--End blog area-->                                                                        
-  
-  
-<!--Start footer area-->  
+</section>
+<!--End blog area-->
+
+
+<!--Start footer area-->
 <footer class="footer-area">
     <div class="container">
         <div class="row"  style="display:none;">
@@ -548,7 +548,7 @@
                                     <h3>Subscribe US</h3>
                                 </div>
                                 <div class="subscribe-form">
-                                    <p>Subscribe to our newsletter!</p> 
+                                    <p>Subscribe to our newsletter!</p>
                                     <form action="#">
                                         <input name="email" placeholder="Enter Your Email..." type="text">
                                         <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
@@ -611,7 +611,7 @@
                             </div>
                         </div>
                         <!--End single footer widget-->
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -620,18 +620,18 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>北国春大棚 联系人:吴经理 手机:15052759577(微信同号)
-版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 - 来自 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
+                        <p style="margin-left: 200px;"> 泓源温室大棚 联系人:高经理 手机:18505266333(微信同号)
+版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
 
-                    
+
                 </div>
             </div>
         </div>
         <!--End footer botton-->
     </div>
-</footer>   
-<!--End footer area--> 
+</footer>
+<!--End footer area-->
 
 
 <!--Scroll to top-->
@@ -669,11 +669,11 @@
 <script src="js/jquery.appear.js"></script>
 <!-- isotope script-->
 <script src="js/isotope.js"></script>
-<script src="js/jquery.prettyPhoto.js"></script> 
+<script src="js/jquery.prettyPhoto.js"></script>
 <!-- jQuery timepicker js -->
 <script src="assets/timepicker/timePicker.js"></script>
 <!-- Bootstrap select picker js -->
-<script src="assets/bootstrap-sl-1.12.1/bootstrap-select.js"></script>                               
+<script src="assets/bootstrap-sl-1.12.1/bootstrap-select.js"></script>
 
 
 <!-- revolution slider js -->
