--- a/www/static/template/shop_onserver/contact.html
+++ b/www/static/template/shop_onserver/contact.html
@@ -116,12 +116,6 @@
                             <li><a href="services.html">我们的服务</a></li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown"><a href="shop.html">产品中心</a>
-                                <ul>
-                                    <li><a href="shop.html">产品中心</a></li>
-                                    <li><a href="shop-single.html">单品</a></li>
-                                    <li><a href="shopping-cart.html">购物车</a></li>
-
-                                </ul>
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
                             <li class="current"><a href="contact.html">联系我们</a></li>
@@ -202,40 +196,7 @@
                                             <span class="flaticon-home-page"></span>
                                         </div>
                                         <div class="text-holder">
-                                            <h5><span>街道</span><br> *** 位置 </h5>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="icon-holder">
-                                            <span class="flaticon-call-answer"></span>
-                                        </div>
-                                        <div class="text-holder">
-                                            <h5><span>电话联系</span><br>18505266333</h5>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="icon-holder">
-                                            <span class="flaticon-envelope"></span>
-                                        </div>
-                                        <div class="text-holder">
-                                            <h5><span>电子邮箱</span><br>18505266333@qq.com</h5>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!--End single accordion box-->
-                        <!--Start single accordion box-->
-                        <div class="accordion accordion-block">
-                            <div class="accord-btn"><h4>原始办公</h4></div>
-                            <div class="accord-content collapsed">
-                                <ul class="contact-info-list">
-                                    <li>
-                                        <div class="icon-holder">
-                                            <span class="flaticon-home-page"></span>
-                                        </div>
-                                        <div class="text-holder">
-                                            <h5><span>鸿源大棚联系人:吴经理</span>  </h5>
+                                            <h5><span>源鸿大棚联系人:高经理</span> </h5>
                                         </div>
                                     </li>
                                     <li>
@@ -293,8 +254,8 @@
                             <div class="col-md-12">
                                 <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden"
                                        value="">
-                                <button class="thm-btn bg-1" type="submit" data-loading-text="Please wait...">send
-                                    message
+                                <button class="thm-btn bg-1" type="submit" data-loading-text="加载中...">
+发送
                                 </button>
                             </div>
                         </div>
