--- a/www/static/template/shop_onserver/shop-single.html
+++ b/www/static/template/shop_onserver/shop-single.html
@@ -115,12 +115,6 @@
                             <li><a href="services.html">我们的服务</a></li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown current"><a href="shop.html">产品中心</a>
-                                <ul>
-                                    <li><a href="shop.html">产品中心</a></li>
-                                    <li><a href="shop-single.html">单品</a></li>
-                                    <li><a href="shopping-cart.html">购物车</a></li>
-
-                                </ul>
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
                             <li><a href="contact.html">联系我们</a></li>
@@ -408,8 +402,8 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>北国春大棚 联系人:吴经理 手机:15052759577(微信同号)
-版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 - 来自 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
+                        <p style="margin-left: 200px;"> 泓源温室大棚 联系人:高经理 手机:18505266333(微信同号)
+版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
 
 
