--- a/www/static/template/shop_onserver/services.html
+++ b/www/static/template/shop_onserver/services.html
@@ -27,16 +27,16 @@
 
 <!--Start Preloader -->
 <div class="preloader"></div>
-<!--End Preloader -->  
+<!--End Preloader -->
 
-<!--Start Top bar area -->  
+<!--Start Top bar area -->
 <section class="top-bar-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-5 col-sm-12 col-xs-12">
                 <div class="welcome">
                     <p>欢迎光临源鸿大棚产品服务中心</p>
-                </div> 
+                </div>
             </div>
             <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12" style="display:none;">
                 <div class="topinfo clearfix">
@@ -76,8 +76,8 @@
         </div>
     </div>
 </section>
-<!--End Top bar area --> 
- 
+<!--End Top bar area -->
+
 <!--Start header area-->
 <header class="header-area">
     <div class="container">
@@ -92,8 +92,8 @@
 
         </div>
     </div>
-</header>  
-<!--End header area--> 
+</header>
+<!--End header area-->
 
 <!--Start mainmenu area-->
 <section class="mainmenu-area stricky">
@@ -102,7 +102,7 @@
             <div class="col-md-8 col-sm-8 col-xs-12">
                 <!--Start mainmenu-->
                 <nav class="main-menu">
-                    <div class="navbar-header">   	
+                    <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -143,15 +143,15 @@
                                 <button type="submit"><i class="fa fa-search"></i></button>
                             </form>
                         </li>
-                    </ul>   
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-</section> 
-<!--End mainmenu area-->  
+</section>
+<!--End mainmenu area-->
 
-<!--Start breadcrumb area-->     
+<!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
 		<h1>我们的服务</h1>
@@ -167,11 +167,11 @@
                 <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li>我们的服务</li>
-            </ul>    
+            </ul>
         </div>
         <div class="right pull-right">
             <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>分享</a>
-        </div>  
+        </div>
     </div>
 </section>
 <!--End breadcrumb bottom area-->
@@ -322,7 +322,7 @@
 </section>
 <!--End services area-->
 
-<!--Start footer area-->  
+<!--Start footer area-->
 <footer class="footer-area">
     <div class="container">
         <div class="row"  style="display:none;">
@@ -371,7 +371,7 @@
                                     <h3>Subscribe US</h3>
                                 </div>
                                 <div class="subscribe-form">
-                                    <p>Subscribe to our newsletter!</p> 
+                                    <p>Subscribe to our newsletter!</p>
                                     <form action="#">
                                         <input name="email" placeholder="Enter Your Email..." type="text">
                                         <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
@@ -434,7 +434,7 @@
                             </div>
                         </div>
                         <!--End single footer widget-->
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -443,18 +443,18 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>北国春大棚 联系人:吴经理 手机:15052759577(微信同号)
-版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 - 来自 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
+                        <p style="margin-left: 200px;"> 泓源温室大棚 联系人:高经理 手机:18505266333(微信同号)
+版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
 
-                    
+
                 </div>
             </div>
         </div>
         <!--End footer botton-->
     </div>
-</footer>   
-<!--End footer area--> 
+</footer>
+<!--End footer area-->
 
 
 <!--Scroll to top-->
@@ -492,11 +492,11 @@
 <script src="js/jquery.appear.js"></script>
 <!-- isotope script-->
 <script src="js/isotope.js"></script>
-<script src="js/jquery.prettyPhoto.js"></script> 
+<script src="js/jquery.prettyPhoto.js"></script>
 <!-- jQuery timepicker js -->
 <script src="assets/timepicker/timePicker.js"></script>
 <!-- Bootstrap select picker js -->
-<script src="assets/bootstrap-sl-1.12.1/bootstrap-select.js"></script>                               
+<script src="assets/bootstrap-sl-1.12.1/bootstrap-select.js"></script>
 <!-- Html 5 light box script-->
 <!--<script src="assets/html5lightbox/html5lightbox.js"></script>-->
 
