--- a/www/static/template/shop_onserver/shopping-cart.html
+++ b/www/static/template/shop_onserver/shopping-cart.html
@@ -27,16 +27,16 @@
 
 <!--Start Preloader -->
 <div class="preloader"></div>
-<!--End Preloader -->  
+<!--End Preloader -->
 
-<!--Start Top bar area -->  
+<!--Start Top bar area -->
 <section class="top-bar-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-5 col-sm-12 col-xs-12">
                 <div class="welcome">
                     <p>欢迎光临源鸿大棚产品服务中心</p>
-                </div> 
+                </div>
             </div>
             <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12" style="display:none;">
                 <div class="topinfo clearfix">
@@ -76,8 +76,8 @@
         </div>
     </div>
 </section>
-<!--End Top bar area --> 
- 
+<!--End Top bar area -->
+
 <!--Start header area-->
 <header class="header-area">
     <div class="container">
@@ -92,8 +92,8 @@
 
         </div>
     </div>
-</header>  
-<!--End header area--> 
+</header>
+<!--End header area-->
 
 <!--Start mainmenu area-->
 <section class="mainmenu-area stricky">
@@ -102,7 +102,7 @@
             <div class="col-md-8 col-sm-8 col-xs-12">
                 <!--Start mainmenu-->
                 <nav class="main-menu">
-                    <div class="navbar-header">   	
+                    <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -115,12 +115,6 @@
                             <li><a href="services.html">我们的服务</a></li>
                             <li><a href="about.html">关于我们</a></li>
                             <li class="dropdown current"><a href="shop.html">产品中心</a>
-                                <ul>
-                                    <li><a href="shop.html">产品中心</a></li>
-                                    <li><a href="shop-single.html">单品</a></li>
-                                    <li><a href="shopping-cart.html">购物车</a></li>
-
-                                </ul>
                             </li>
                             <li><a href="blog.html">行业动态</a></li>
                             <li><a href="contact.html">联系我们</a></li>
@@ -148,15 +142,15 @@
                                 <button type="submit"><i class="fa fa-search"></i></button>
                             </form>
                         </li>
-                    </ul>   
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-</section> 
-<!--End mainmenu area-->  
+</section>
+<!--End mainmenu area-->
 
-<!--Start breadcrumb area-->     
+<!--Start breadcrumb area-->
 <section class="breadcrumb-area">
 	<div class="container text-center">
 		<h1>购物车</h1>
@@ -174,11 +168,11 @@
                 <li><a href="shop.html">产品中心</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
                 <li>购物车</li>
-            </ul>    
+            </ul>
         </div>
         <div class="right pull-right">
             <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>分享</a>
-        </div>  
+        </div>
     </div>
 </section>
 <!--End breadcrumb bottom area-->
@@ -199,7 +193,7 @@
                                 <th class="price">Price</th>
                                 <th>Total</th>
                                 <th>Remove</th>
-                            </tr>    
+                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -210,7 +204,7 @@
                                         </div>
                                         <div class="title">
                                             <h3 class="prod-title">Portable Mobile Stand</h3>
-                                        </div>    
+                                        </div>
                                     </div>
                                 </td>
                                 <td class="qty">
@@ -230,7 +224,7 @@
                                                 <input name="remove" type="checkbox">
                                                 <span>Remove</span>
                                             </label>
-                                        </div>   
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
@@ -242,7 +236,7 @@
                                         </div>
                                         <div class="title">
                                             <h3 class="prod-title">Portable Mobile Stand</h3>
-                                        </div>    
+                                        </div>
                                     </div>
                                 </td>
                                 <td class="qty">
@@ -262,14 +256,14 @@
                                                 <input name="remove" type="checkbox">
                                                 <span>Remove</span>
                                             </label>
-                                        </div>   
+                                        </div>
                                     </div>
                                 </td>
                             </tr>
-                        </tbody>    
+                        </tbody>
                     </table>
                 </div>
-            </div>     
+            </div>
         </div>
         <div class="row cart-middle">
             <div class="col-md-6 col-sm-8 col-xs-12">
@@ -277,7 +271,7 @@
                     <input type="text" name="coupon-code" value="" placeholder="Enter Coupon Code...">
                     <div class="apply-coupon-button">
                         <button class="thm-btn bg-1" type="button">Apply Coupon</button>
-                    </div>        
+                    </div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-4 col-xs-12">
@@ -306,7 +300,7 @@
                             <input class="zip-code" type="text" placeholder="Zip Code" required>
                         </div>
                     </div>
-				    <button class="thm-btn bg-1" type="submit">update Totals</button> 
+				    <button class="thm-btn bg-1" type="submit">update Totals</button>
                 </div>
             </div>
             <!--Start cart total -->
@@ -318,27 +312,27 @@
                     <ul class="cart-total-table">
                         <li class="clearfix">
                             <span class="col col-title">Cart Subtotal</span>
-                            <span class="col">$146.00</span>    
+                            <span class="col">$146.00</span>
                         </li>
                         <li class="clearfix">
                             <span class="col col-title">Shipping and Handling</span>
-                            <span class="col">$40.00- <b>Calculate Shipping</b></span>    
+                            <span class="col">$40.00- <b>Calculate Shipping</b></span>
                         </li>
                         <li class="clearfix">
                             <span class="col col-title">Order Total</span>
-                            <span class="col">$146.00</span>    
-                        </li>      
+                            <span class="col">$146.00</span>
+                        </li>
                     </ul>
-                    <button class="thm-btn bg-1 checkout-btn">Proceed to Checkout</button> 
-                </div>    
+                    <button class="thm-btn bg-1 checkout-btn">Proceed to Checkout</button>
+                </div>
             </div>
             <!--End cart total -->
         </div>
     </div>
-</section>         
+</section>
 <!--End cart area-->
 
-<!--Start footer area-->  
+<!--Start footer area-->
 <footer class="footer-area">
     <div class="container">
         <div class="row"  style="display:none;">
@@ -387,7 +381,7 @@
                                     <h3>Subscribe US</h3>
                                 </div>
                                 <div class="subscribe-form">
-                                    <p>Subscribe to our newsletter!</p> 
+                                    <p>Subscribe to our newsletter!</p>
                                     <form action="#">
                                         <input name="email" placeholder="Enter Your Email..." type="text">
                                         <button type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
@@ -450,7 +444,7 @@
                             </div>
                         </div>
                         <!--End single footer widget-->
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -459,18 +453,18 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>北国春大棚 联系人:吴经理 手机:15052759577(微信同号)
-版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 - 来自 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
+                        <p style="margin-left: 200px;"> 泓源温室大棚 联系人:高经理 手机:18505266333(微信同号)
+版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
 
-                    
+
                 </div>
             </div>
         </div>
         <!--End footer botton-->
     </div>
-</footer>   
-<!--End footer area--> 
+</footer>
+<!--End footer area-->
 
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
@@ -507,11 +501,11 @@
 <script src="js/jquery.appear.js"></script>
 <!-- isotope script-->
 <script src="js/isotope.js"></script>
-<script src="js/jquery.prettyPhoto.js"></script> 
+<script src="js/jquery.prettyPhoto.js"></script>
 <!-- jQuery timepicker js -->
 <script src="assets/timepicker/timePicker.js"></script>
 <!-- Bootstrap select picker js -->
-<script src="assets/bootstrap-sl-1.12.1/bootstrap-select.js"></script>                               
+<script src="assets/bootstrap-sl-1.12.1/bootstrap-select.js"></script>
 <!-- Html 5 light box script-->
 <!--<script src="assets/html5lightbox/html5lightbox.js"></script>-->
 <script src="js/jquery.bootstrap-touchspin.js"></script>
