--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -232,15 +232,21 @@
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
+                            <li data-title="蔬菜大棚">
+                                <a href="#">
+                                    蔬菜大棚
+                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
+                                </a>
+                            </li>
                             <li data-title="花卉大棚">
                                 <a href="#">
                                     花卉大棚
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
-                            <li data-title="蔬菜大棚">
+                            <li data-title="温室配件">
                                 <a href="#">
-                                    蔬菜大棚
+                                    温室配件
                                     <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
                                 </a>
                             </li>
