--- a/www/static/template/shop_onserver/shop.html
+++ b/www/static/template/shop_onserver/shop.html
@@ -195,9 +195,6 @@
                 <li>产品中心</li>
             </ul>
         </div>
-        <div class="right pull-right">
-            <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i>分享</a>
-        </div>
     </div>
 </section>
 <!--End breadcrumb bottom area-->
@@ -391,7 +388,8 @@
             <div class="col-md-12">
                 <div class="footer-bottom">
                     <div class="copyright-text pull-left">
-                        <p>Copyright &copy; 2019.Company name 南京稻壳网络科技有限公司 </p>
+                            <p style="margin-left: 200px;"> 泓源温室大棚 联系人:高经理 手机:18505266333(微信同号)
+                                版权所有： 南京稻壳网络科技有限公司 ICP备案号: 苏ICP备18022274号-8 <a href="#" title="南京稻壳网络科技有限公司" target="_blank"></a></p>
                     </div>
                 </div>
             </div>
