--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -166,7 +166,7 @@
             <ul>
                 <li><a href="index.html">网站首页</a></li>
                 <li><i class="fa fa-caret-right" aria-hidden="true"></i></li>
-                <li>News</li>
+                <li>行业动态</li>
             </ul>
         </div>
 
@@ -332,161 +332,8 @@
                         </div>
                     </div>
                     <!--End single blog post-->
-
-                    <!--Start post pagination-->
-                    <div class="row">
-                        <div class="col-md-12">
-                            <ul class="post-pagination text-center">
-                                <li><a href="#"><i class="fa fa-caret-left" aria-hidden="true"></i></a></li>
-                                <li class="active"><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!--End post pagination-->
                 </div>
             </div>
-            <!--Start sidebar Wrapper-->
-            <div class="col-lg-3 col-md-4 col-sm-7 col-xs-12">
-                <div class="sidebar-wrapper">
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <form class="search-form" action="#">
-							<input placeholder="Search..." type="text">
-							<button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-						</form>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <div class="sidebar-title">
-                            <h1>Categories</h1>
-                        </div>
-                        <ul class="categories clearfix">
-                            <li>
-                                <a href="#">
-                                    Smart Phones
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Desktop & Mac
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Game Console
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Safety & Security
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Uncategorized
-                                    <span class="pull-right"><i class="fa fa-angle-right" aria-hidden="true"></i> </span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single sidebar-->
-                    <div class="single-sidebar">
-                        <div class="sidebar-title">
-                            <h1>Recent Post</h1>
-                        </div>
-                        <ul class="recent-post">
-                            <li>
-                                <a href="#">
-                                    <h5 class="post-title">
-                                        We offer the best in same day iPhone Repairs plymouth
-                                    </h5>
-                                </a>
-                                <h6 class="post-date">
-                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                    July 21, 2016
-                                </h6>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <h5 class="post-title">
-                                        iPad Repairs For Schools/Universities Across The Usa
-                                    </h5>
-                                </a>
-                                <h6 class="post-date">
-                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                    March 17, 2016
-                                </h6>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <h5 class="post-title">
-                                        All Software Boxes & Dongles Available At Best Prices
-                                    </h5>
-                                </a>
-                                <h6 class="post-date">
-                                    <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                    January 10, 2016
-                                </h6>
-                            </li>
-
-                        </ul>
-                    </div>
-                    <!--End single sidebar-->
-                    <!--Start single-sidebar-->
-                    <div class="single-sidebar">
-                        <div class="sidebar-title">
-                            <h1>行业动态 Archives</h1>
-                        </div>
-                        <ul class="blog-archive">
-                            <li><a href="#">August 2013  (5)</a></li>
-                            <li><a href="#">December 2013  (8)</a></li>
-                            <li><a href="#">January 2014  (4)</a></li>
-                            <li><a href="#">September 2014  (9)</a></li>
-                        </ul>
-                    </div>
-                    <!--End single-sidebar-->
-                    <!--Start single-sidebar-->
-                    <div class="single-sidebar popular-tag">
-                        <div class="sidebar-title">
-                            <h1>Popular Tags</h1>
-                        </div>
-                        <ul class="popular-tag">
-                            <li><a href="#">Safe</a></li>
-                            <li><a href="#">Phones</a></li>
-                            <li><a href="#">Pc&Laptops</a></li>
-                            <li><a href="#">Game Disk</a></li>
-                            <li><a href="#">Ideas</a></li>
-                            <li><a href="#">Repair</a></li>
-                            <li><a href="#">Processor</a></li>
-                            <li><a href="#">Unlocked</a></li>
-                            <li><a href="#">Software</a></li>
-                            <li><a href="#">TV</a></li>
-                            <li><a href="#">LED Screen</a></li>
-                        </ul>
-                    </div>
-                    <!--End single-sidebar-->
-                    <!--Start single-sidebar-->
-                    <div class="single-sidebar facebook">
-                        <div class="sidebar-title">
-                            <h1>Facebook</h1>
-                        </div>
-                        <div class="follow-us-content">
-                            <img src="images/sidebar/fb-follow-us.jpg" alt="Awesome Follow Us Image">
-                        </div>
-                    </div>
-                    <!--End single-sidebar-->
-                </div>
-            </div>
-            <!--End Sidebar Wrapper-->
         </div>
     </div>
 </section>
