--- a/www/static/template/shop_onserver/blog.html
+++ b/www/static/template/shop_onserver/blog.html
@@ -177,162 +177,12 @@
 <!--Start blog area-->
 <section id="blog-area" class="blog-with-sidebar-area">
     <div class="container">
-        <div class="row">
+        <div class="row" >
             <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12">
-                <div class="blog-post">
+                <div class="blog-post" id="blogContainer">
                     <!--Start single blog post-->
-                    <div class="single-blog-item">
-                        <div class="img-holder">
-                            <img src="images/blog/1.jpg" alt="Awesome Image">
-                            <div class="overlay">
-                                <div class="box">
-                                    <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-holder">
-                            <div class="date-box">
-                                <h4>21 Aug</h4>
-                            </div>
-                            <div class="text-box">
-                                <a href="blog-single.html">
-                                    <h3 class="blog-title">iPad Repairs For Schools/Universities Across The Usa</h3>
-                                </a>
-                                <ul class="meta-info">
-                                    <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">Mark Fletcher</a></li>
-                                    <li><i class="fa fa-tags" aria-hidden="true"></i><a href="#">Pin Number</a></li>
-                                    <li><i class="fa fa-eye" aria-hidden="true"></i><a href="#">55 Views</a></li>
-                                    <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">22 Comments</a></li>
-                                </ul>
-                                <div class="text">
-                                    <p>Pleasures and praising pains was born and will give you a completed account of the systems seds, and seds expound the actual teaching of the great explorer the master-builder  Nor again is there anyones who loves or pursues or desires to obtain pain of itself occasionally circumstance.</p>
-                                    <div class="bottom clearfix">
-                                        <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
                     <!--End single blog post-->
-                    <!--Start single blog post-->
-                    <div class="single-blog-item">
-                        <div class="img-holder">
-                            <img src="images/blog/2.jpg" alt="Awesome Image">
-                            <div class="overlay">
-                                <div class="box">
-                                    <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-holder">
-                            <div class="date-box">
-                                <h4>17 jun</h4>
-                            </div>
-                            <div class="text-box">
-                                <a href="blog-single.html">
-                                    <h3 class="blog-title">We offer the best in same day iPhone Repairs plymouth</h3>
-                                </a>
-                                <ul class="meta-info">
-                                    <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">Astley Duminy</a></li>
-                                    <li><i class="fa fa-tags" aria-hidden="true"></i><a href="#">Full Damage</a></li>
-                                    <li><i class="fa fa-eye" aria-hidden="true"></i><a href="#">34 Views</a></li>
-                                    <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">16 Comments</a></li>
-                                </ul>
-                                <div class="text">
-                                    <p>Explain to you how all this mistaken idea of denouncing pleasures sed nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, because occasionally circumstances occur in which toil and pain can procure him some great pleasure. and praising pain was born and will teachings.</p>
-                                    <div class="bottom clearfix">
-                                        <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End single blog post-->
-                    <!--Start single blog post-->
-                    <div class="single-blog-item">
-                        <div class="img-holder">
-                            <img src="images/blog/3.jpg" alt="Awesome Image">
-                            <div class="overlay">
-                                <div class="box">
-                                    <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-holder">
-                            <div class="date-box">
-                                <h4>21 Aug</h4>
-                            </div>
-                            <div class="text-box">
-                                <a href="blog-single.html">
-                                    <h3 class="blog-title">All Software Boxes and Dongles Available At Best Prices</h3>
-                                </a>
-                                <ul class="meta-info">
-                                    <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">Mark Fletcher</a></li>
-                                    <li><i class="fa fa-tags" aria-hidden="true"></i><a href="#">Pin Number</a></li>
-                                    <li><i class="fa fa-eye" aria-hidden="true"></i><a href="#">55 Views</a></li>
-                                    <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">22 Comments</a></li>
-                                </ul>
-                                <div class="text">
-                                    <p>Pleasures and praising pains was born and will give you a completed account of the systems seds, and seds expound the actual teaching of the great explorer the master-builder  Nor again is there anyones who loves or pursues or desires to obtain pain of itself occasionally circumstance.</p>
-                                    <div class="bottom clearfix">
-                                        <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End single blog post-->
-                    <!--Start single blog post-->
-                    <div class="single-blog-item">
-                        <div class="img-holder">
-                            <img src="images/blog/4.jpg" alt="Awesome Image">
-                            <div class="overlay">
-                                <div class="box">
-                                    <div class="content">
-                                        <a href="blog-single.html"><i class="fa fa-link"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-holder">
-                            <div class="date-box">
-                                <h4>17 jun</h4>
-                            </div>
-                            <div class="text-box">
-                                <a href="blog-single.html">
-                                    <h3 class="blog-title">Have you dropped your mobile phone & smashed screen?</h3>
-                                </a>
-                                <ul class="meta-info">
-                                    <li><i class="fa fa-user" aria-hidden="true"></i><a href="#">Astley Duminy</a></li>
-                                    <li><i class="fa fa-tags" aria-hidden="true"></i><a href="#">Full Damage</a></li>
-                                    <li><i class="fa fa-eye" aria-hidden="true"></i><a href="#">34 Views</a></li>
-                                    <li><i class="fa fa-comments" aria-hidden="true"></i><a href="#">16 Comments</a></li>
-                                </ul>
-                                <div class="text">
-                                    <p>Explain to you how all this mistaken idea of denouncing pleasures sed nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, because occasionally circumstances occur in which toil and pain can procure him some great pleasure. and praising pain was born and will teachings.</p>
-                                    <div class="bottom clearfix">
-                                        <div class="readmore pull-left">
-                                            <a href="blog-single.html">Read More<i class="fa fa-caret-right" aria-hidden="true"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End single blog post-->
-                </div>
             </div>
         </div>
     </div>
